
=item *

B<pullnews> no longer stops processing newsgroups when an error occur during
its run (for instance when a newsgroup mentioned in the configuration file
is removed from an upstream server).  Besides, it can now use authentication
when posting to the downstream server.

A few other minor bugs have been fixed as for the way B<pullnews> counts
the articles.

=item *

A new parameter has been added to F<inn.conf> to determine whether the status
file that B<innd> can write out (depending on the value of the I<status>
parameter) is plain text or wrapped in HTML.  It previously only was a
compile-time option, set to true by default.  Florian Schlichting added
the I<htmlstatus> parameter to provide a configurable behaviour.

=item *

It is now possible to run a script at the end of the execution of
B<innshellvars> scripts.  If a file named F<innshellvars.local>,
F<innshellvars.pl.local> or F<innshellvars.tcl.local> is present and
executable in I<pathetc>, then it will be executed by the corresponding
B<innshellvars> script (respectively shell, INN::Config Perl module,
and Tcl).  A typical use is to add or override variables.

=item *

Add support for wire-formatted articles in B<scanspool>.

=item *

A lot of work on cleaning old perl4-style code has been done by Florian
Schlichting.

=item *

B<inncheck> now generates a proper non-zero exit value when errors are found,
and allows quiet mode with the B<-q> flag.  Florian Schlichting has greatly
improved this script in many regards, especially with a config-syntax parser
for F<incoming.conf>, F<innfeed.conf>, F<readers.conf> and F<storage.conf>.

=item *

B<inncheck> now properly finds the boundaries of substituted variables in
F<newsfeeds> thanks to Alexander Bartolich.

=item *

B<docheckgroups> no longer uses awk.  On a few systems, the script was
failing because of the presence of an old version of awk that has a limit
in the size of the input it can handle.  Processing large newsgroups files